빌드.그레들 수정

--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,24 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.+'
 	implementation 'org.springframework:spring-context:5.+'
 	implementation 'org.springframework:spring-jdbc:5.+'
+	
+	implementation 'org.apache.logging.log4j:log4j-api:2.+'
+    implementation 'org.apache.logging.log4j:log4j-core:2.+'
+}
+task runMain(type: JavaExec) {
+	main = 'spring5.chap02.Main'
+	classpath =  sourceSets.main.runtimeClasspath
+}
+
+task runMain2(type: JavaExec) {
+	main = 'spring5.chap02.Main2'
+	classpath =  sourceSets.main.runtimeClasspath
+}
+task docs (dependsOn: javadoc, type: Copy) {
+	from 'build/docs/javadoc'
+	into 'docs'
+}
+task runMemberMain(type: JavaExec) {
+	main = 'spring5.chap03.MemberMain'
+	classpath =  sourceSets.main.runtimeClasspath
 }
